content/docs/v2020.10.30/reference/aws.kubeform.com/EcsCluster.md
---
title: EcsCluster
menu:
  docs_v2020.10.30:
    identifier: ecscluster-aws.kubeform.com
    name: EcsCluster
    parent: aws.kubeform.com-reference
    weight: 1
menu_name: docs_v2020.10.30
section_menu_id: reference
info:
  community: v0.3.0
  installer: v0.3.0
  version: v2020.10.30
---

## EcsCluster
| Field | Type | Description |
| ------ | ----- | ----------- |
| `apiVersion` | string | `aws.kubeform.com/v1alpha1` |
|    `kind` | string | `EcsCluster` |
| `metadata` | ***[Kubernetes meta/v1.ObjectMeta](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#objectmeta-v1-meta)***|Refer to the Kubernetes API documentation for the fields of the `metadata` field.|
| `spec` | ***[EcsClusterSpec](#ecsclusterspec)***||
| `status` | ***[EcsClusterStatus](#ecsclusterstatus)***||
## EcsClusterSpec

Appears on:[EcsCluster](#ecscluster), [EcsClusterStatus](#ecsclusterstatus)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `providerRef` | ***[Kubernetes core/v1.LocalObjectReference](https://v1-18.docs.kubernetes.io/docs/reference/generated/kubernetes-api/v1.18/#localobjectreference-v1-core)***||
| `id` | ***string***||
| `arn` | ***string***| ***(Optional)*** |
| `name` | ***string***||
| `setting` | ***[[]EcsClusterSpecSetting](#ecsclusterspecsetting)***| ***(Optional)*** |
| `tags` | ***map[string]string***| ***(Optional)*** |
## EcsClusterSpecSetting

Appears on:[EcsClusterSpec](#ecsclusterspec)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `name` | ***string***||
| `value` | ***string***||
## EcsClusterStatus

Appears on:[EcsCluster](#ecscluster)

| Field | Type | Description |
| ------ | ----- | ----------- |
| `observedGeneration` | ***int64***| ***(Optional)*** Resource generation, which is updated on mutation by the API Server.|
| `output` | ***[EcsClusterSpec](#ecsclusterspec)***| ***(Optional)*** |
| `state` | ***kubeform.dev/kubeform/apis/base/v1alpha1.State***| ***(Optional)*** |
| `phase` | ***[Phase](#phase)***| ***(Optional)*** |
## Phase(`string` alias)

Appears on:[EcsClusterStatus](#ecsclusterstatus)

---
